[BUGFIX] Git commands in workflow

--- a/.github/workflows/prepare-render.yml
+++ b/.github/workflows/prepare-render.yml
@@ -41,10 +41,8 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git fetch origin main
-          git checkout main
           git add .
           git commit -m "Pre-render: $(git show -s --format='%s')"
-          git push origin main --force
+          git push origin contrib:main --force
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
